@@ -1,3 +1,9 @@
+2003-07-17  Elena Zannoni  <ezannoni@redhat.com>
+
+	* Makefile.in (x86-64-linux-nat.o): Update dependencies.
+	* x86-64-linux-nat.c (ps_get_thread_area): New function.  Add
+	include of asm/prctl.h, asm/ptrace.h, and gdb_proc_service.h.
+
 2003-07-16  Theodore A. Roth  <troth@openavr.org>
 
 	* avr-tdep.c (avr_skip_prologue): Return PC unchanged if no prologue
